# wireguard-tui

./: README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
source/: app.tcss  main.py  wireguard_client.py  wireguard_daemon.py  wireguard_service.py
source/widgets/: __init__.py  logs.py  network_information.py  tunnel_information.py  tunnel_select.py  tunnels_list.py
src/widgets/: __init__.py  tunnel_information.py  tunnel_select.py
src/wireguard-tui/: app.tcss  wireguard_client.py
src/wireguard-tui/widgets/: logs.py  status.py
src/wireguard_tui/: __about__.py  app.py  app.tcss  wireguard_client.py  wireguard_daemon.py
src/wireguard_tui/service/: wireguard-daemon.service
src/wireguard_tui/systemd/: wireguard-daemon.service
src/wireguard_tui/widgets/: __init__.py  network_information.py  status.py  tunnel_information.py  tunnel_select.py
tests/: test_client.py
tests/unit/: test_client.py
tests/widgets/: test_tunnel_select.py
