[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wireguard-tui"
version = "0.0.0"
keywords = ["wireguard", "tui", "rich"]
authors = [
  { name="ShiroTohu" },
]
description = "A TUI for managing wireguard tunnels"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
]
license = "GPL-3.0"
license-files = ["LICEN[CS]E*"]
dependencies = [
  "textual",
  "rich"
]

[project.urls]
Homepage = "https://github.com/ShiroTohu/wireguard-tui"
Issues = "https://github.com/ShiroTohu/wireguard-tui/issues"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[project.scripts]
wireguard-tui = "wireguard_tui.app:main"
wireguard-daemon = "wireguard_tui.wireguard_daemon:main"